dataset1235/2025-2/2868285114/users/214715729/executions/3071719669_1128387558.log
== SUBMISSION (2025-08-28 22:20:55)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(round(valorEmReais, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:24:56)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, 2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:23:59)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, f2"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:24:57)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, 2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:24:00)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, f2"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:27:59)
-- CODE: 
valor_dolar = float(input())
valor_reais = valor_dolar * 2.96
print(f"{valor_reais:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
---- user output:
20.72
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
---- user output:
2.96
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
---- user output:
23.68
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
---- user output:
56.24
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
---- user output:
62.16
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
---- user output:
5.92
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:24:56)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, 2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:24:55)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, 2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:40)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:23:58)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, f2"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
File "XXXX", line 3
    print(f"{valorEmReais:, f2"))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:24:57)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:, 2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:25:39)
-- CODE: 
valorEmdolarNeozelandes = float(inpu())
valorEmReais = valorEmdolarNeozelandes * 2.96
print(f"{valorEmReais:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
20.72
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
1
---- correct output:
2.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
8
---- correct output:
23.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
19
---- correct output:
56.24
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
21
---- correct output:
62.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
2
---- correct output:
5.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valorEmdolarNeozelandes = float(inpu())
                                    ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
